cmake_minimum_required(VERSION 3.14)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)

#2019/9/1
add_executable(JT1047 JT1047.cpp)
add_executable(JT1049 JT1049.cpp)
add_executable(t1050 t1050.cpp)
add_executable(t1051 t1051.cpp)
#2019/9/3 7:00
add_executable(t1052 t1052.cpp)
add_executable(t1053 t1053.cpp)
add_executable(t1054 t1054.cpp)
#2019/9/3 9:00
add_executable(t1055 t1055.cpp)
add_executable(t1056 t1056.cpp)
add_executable(t1057 t1057.cpp)
add_executable(t1058 t1058.cpp)
add_executable(t1059 t1059.cpp)
add_executable(t1060 t1060.cpp)
#2019/9/5 7:00
add_executable(t1061 t1061.cpp)
add_executable(t1062 t1062.cpp)
add_executable(t1063 t1063.cpp)
add_executable(t1064 t1064.cpp)
#2019/9/5 10:00
add_executable(t1065 t1065.cpp)