cmake_minimum_required(VERSION 3.14)
project(untitled)

set(CMAKE_CXX_STANDARD 14)

add_executable(main main.cpp)

#2019/9/1
add_executable(t1047 simple/t1047.cpp)
add_executable(t1049 simple/t1049.cpp)
add_executable(t1050 simple/t1050.cpp)
add_executable(t1051 simple/t1051.cpp)
#2019/9/3 7:00
add_executable(t1052 simple/t1052.cpp)
add_executable(t1053 simple/t1053.cpp)
add_executable(t1054 simple/t1054.cpp)
#2019/9/3 9:00
add_executable(t1055 simple/t1055.cpp)
add_executable(t1056 simple/t1056.cpp)
add_executable(t1057 simple/t1057.cpp)
add_executable(t1058 simple/t1058.cpp)
add_executable(t1059 simple/t1059.cpp)
add_executable(t1060 simple/t1060.cpp)
#2019/9/5 7:00
add_executable(t1061 simple/t1061.cpp)
add_executable(t1062 simple/t1062.cpp)
add_executable(t1063 simple/t1063.cpp)
add_executable(t1064 simple/t1064.cpp)
#2019/9/5 10:00
add_executable(t1065 simple/t1065.cpp)

#2020/1/6 16:00
add_executable(t1066 simple/t1066.cpp)
add_executable(t1067 simple/t1067.cpp)
add_executable(t1069 simple/t1069.cpp)
#2020/1/6 20:00
add_executable(t1079 popular/t1079.cpp)
add_executable(t1084 popular/t1084.cpp)
add_executable(t1096 popular/t1096.cpp)
add_executable(t1098 popular/t1098.cpp)
add_executable(t1070 simple/t1070.cpp)
add_executable(t1071 simple/t1071.cpp)
add_executable(t1072 simple/t1072.cpp)
add_executable(t1002 simple/t1002.cpp simple/t1085.cpp)
add_executable(t1003 simple/t1003.cpp)
add_executable(t1016 simple/t1016.cpp)
add_executable(t1015 simple/t1015.cpp)
add_executable(t1006 simple/t1006.cpp)
add_executable(t1046 simple/t1046.cpp)

#2020/1/7 9:00
add_executable(t1073 simple/t1073.cpp)
add_executable(t1074 simple/t1074.cpp)
add_executable(t1075 simple/t1075.cpp)
add_executable(t1076 simple/t1076.cpp)
add_executable(t1077 simple/t1077.cpp)
add_executable(t1078 simple/t1078.cpp)
#2020/1/7 13:00
add_executable(t1068 popular/t1068.cpp)
#2020/1/7 18:00
add_executable(t1099 popular/t1099.cpp)

#2020/1/8 8:30
add_executable(t1100 popular/t1100.cpp)
add_executable(t1093 simple/t1093.cpp)
add_executable(t1090 simple/t1090.cpp)
#2020/1/8 16:00
add_executable(t1102 popular/t1102.cpp)

#2020/1/9 9:30
add_executable(t1085 simple/t1085.cpp)
add_executable(t1095 simple/t1095.cpp)
#2020/1/9 18:00
add_executable(t1134 popular/t1134.cpp)
add_executable(t1135 popular/t1135.cpp)
add_executable(t1136 popular/t1136.cpp)

#2020/1/10 10:00
add_executable(t1965 popular/t1965.cpp)
add_executable(t1185 popular/t1185.cpp)

#2020/1/11 10:30
add_executable(t1139 popular/t1139.cpp)
add_executable(t1140 popular/t1140.cpp)

#2020/1/24 19:00
add_executable(t1484 popular/t1484.cpp)
add_executable(t1653 simple/t1653.cpp)

#2020/2/20 20:30
add_executable(t1301 simple/t1301.cpp)
add_executable(t1328 simple/t1328.cpp)
add_executable(t1336 simple/t1336.cpp)

#2020/2/22 21:00
add_executable(t1081 simple/t1081.cpp)

#2020/2/24 21:30
add_executable(t1907 simple/t1907.cpp)